Add: A demo for Wio Terminal to simulate mouse by buttons.

--- a/.travis.yml
+++ b/.travis.yml
@@ -105,6 +105,7 @@ script:
 
      echo "*************************************WioTerminal_ButtonMouseControl***********************************************************************************"
     - rm -rf $HOME/Arduino/libraries/*
+    - installLibrary  arduino-libraries/Mouse
     - export BOARD=Seeeduino:samd:seeed_wio_terminal
     - buildExampleSketch WioTerminal_ButtonMouseControl;
 
