--- a/.travis.yml
+++ b/.travis.yml
@@ -120,6 +120,19 @@ script:
     - export BOARD=Seeeduino:samd:seeed_wio_terminal
     - buildExampleSketch WioTerminal_NTP;
 
+    - echo "*************************************WioTerminal_Https_Stock_Demo*********************************************"
+    - rm -rf $HOME/Arduino/libraries/*
+    - rm -rf /tmp/arduino*
+    - installLibrary Seeed-Studio/Seeed_Arduino_atWiFi
+    - installLibrary Seeed-Studio/Seeed_Arduino_FreeRTOS
+    - installLibrary Seeed-Studio/Seeed_Arduino_atUnified
+    - installLibrary Seeed-Studio/Seeed_Arduino_atWiFiClientSecure
+    - installLibrary Seeed-Studio/Seeed_Arduino_mbedtls
+    - installLibrary Seeed-Studio/esp-at-lib
+    - installLibrary bblanchon/ArduinoJson
+    - export BOARD=Seeeduino:samd:seeed_wio_terminal
+    - buildExampleSketch WioTerminal_Https_Stock_Demo;
+
 notifications:
   webhooks:
     urls:
